# housing-commute-analysis

./: .env.example  .gitconfig  .gitignore  CLAUDE.md  Makefile  README.md  RUNNING_ANALYSIS.md  RUNNING_PIPELINE.md  pyproject.toml  requirements.txt  run_analysis.py  run_pipeline.py
.afk/: config.toml
.claude/docs/: parallel-agents.md  project.md  root-cause-tracing.md  subagent-development.md  tdd.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/references/: fix-workflow.md  markdown-checks.md  mermaid-checks.md  python-checks.md
.claude/skills/code-review/scripts/: markdown_analyzer.py  report_generator.py
.claude/skills/code-review/scripts/tests/: test_encoding_detection.py  test_report_generator.py
.claude/skills/commit/: SKILL.md
.claude/skills/commit/references/: conventional-commits.md
.claude/skills/github-cli/: SKILL.md
.claude/skills/github-cli/references/: commands.md
.claude/skills/gitlab-cli/: SKILL.md
.claude/skills/gitlab-cli/references/: commands.md
.claude/skills/readme-generator/: SKILL.md
.claude/skills/readme-generator/references/: analysis-phases.md  badge-reference.md  mermaid-guidelines.md
.github/workflows/: ci.yml
data/final/: acs_commute_2019_atlanta.csv  acs_commute_2019_chicago.csv  acs_commute_2019_dallas.csv  acs_commute_2019_denver.csv  acs_commute_2019_los_angeles.csv  acs_commute_2019_memphis.csv  acs_commute_2019_miami.csv  acs_commute_2019_phoenix.csv  acs_commute_2019_seattle.csv  atlanta.acs_commute_2019.manifest.json  atlanta.lodes_panel.manifest.json  atlanta.manifest.json  atlanta.zori_panel.manifest.json  chicago.acs_commute_2019.manifest.json  chicago.lodes_panel.manifest.json  chicago.manifest.json  chicago.zori_panel.manifest.json  dallas.acs_commute_2019.manifest.json  dallas.lodes_panel.manifest.json  dallas.manifest.json  dallas.zori_panel.manifest.json  denver.acs_commute_2019.manifest.json  denver.lodes_panel.manifest.json  denver.manifest.json  denver.zori_panel.manifest.json  final_zcta_dataset_atlanta.csv  final_zcta_dataset_chicago.csv  final_zcta_dataset_dallas.csv  final_zcta_dataset_denver.csv  final_zcta_dataset_los_angeles.csv  final_zcta_dataset_memphis.csv  final_zcta_dataset_miami.csv  final_zcta_dataset_phoenix.csv  final_zcta_dataset_seattle.csv  lodes_panel_atlanta.csv  lodes_panel_chicago.csv  lodes_panel_dallas.csv  lodes_panel_denver.csv  lodes_panel_los_angeles.csv  lodes_panel_memphis.csv  (+32 more)
docs/: findings.md
docs/archive/: 2026-07-09-engineering-hardening-plan.md  2026-07-10-employment-center-variables-design.md  2026-07-10-employment-center-variables-plan.md  2026-07-17-rq4-zori-dynamics-design.md  2026-07-17-rq4-zori-dynamics-plan.md  http_resilience_and_config_refactor.md  refactor_analysis_reporting.md
docs/paper/: covid-commute-gradient-repricing.md
docs/plans/: 2026-07-09-engineering-hardening-design.md  2026-07-17-rq4-zori-dynamics-design.md
docs/plans/archive/: quick_fixes_and_linting.md  test_suite.md
docs/reviews/: 2026-03-03_full_repo_review.md
explorer/: app.css  app.js  index.html
explorer/data/: geo_atl.json  geo_chi.json  geo_den.json  geo_dfw.json  geo_la.json  geo_mem.json  geo_mia.json  geo_phx.json  geo_sea.json  rq4.json
scripts/: export_explorer_geojson.py  export_rq4_explorer.py  panel_gate.py  rebuild_gate.py
src/: __init__.py
src/dashboard/: __init__.py
src/models/: MODELS_README.md  __init__.py  data_loader.py  models.py  panel_fe.py  preprocessing.py  reporting.py  results.py  rq1_housing_commute_tradeoff.py  rq2_equity_analysis.py  rq3_aci_analysis.py  rq4_rent_dynamics.py  visualization.py
src/pipelines/: PIPELINE_README.md  __init__.py  acs.py  build.py  config.py  create_zcta_shapefile.py  demographics.py  lodes.py  manifest.py  osm.py  panel.py  prefect_config.py  schema.py  spatial.py  tiger.py  utils.py  zori.py
src/utils/: __init__.py  config.py
tests/: conftest.py  test_acs.py  test_config.py  test_data_loader.py  test_demographics.py  test_determinism.py  test_flow_structure.py  test_lodes.py  test_manifest.py  test_models.py  test_panel_fe.py  test_panel_gate.py  test_panel_pipeline.py  test_preprocessing.py  test_rebuild_gate.py  test_reporting.py  test_reporting_output.py  test_rq1.py  test_rq2.py  test_rq3.py  test_rq4.py  test_schema.py  test_tiger.py  test_utils.py
tests/fixtures/: acs_features_golden.csv  zori_latest_golden.csv  zori_wide_fixture.csv
