[project]
name = "housing-commute-analysis"
version = "0.1.0"
description = "Housing Affordability & Commute Trade-Off Analysis: nine-metro pipeline + econometrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "matplotlib>=3.7.0",
    # Note: seaborn removed per project style guide
    # ("Avoid seaborn unless explicitly requested")
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "osmnx==2.0.6",
    "requests>=2.31.0",
    "ydata-profiling>=4.0.0",
    "prefect>=3.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "network: marks tests requiring network access (deselect with -m 'not network')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
# Omit modules that require network access, real census data, or full pipeline execution.
# These are integration-only paths not covered by the unit test suite.
omit = [
    "src/models/visualization.py",
    "src/pipelines/build.py",
    "src/pipelines/osm.py",
    "src/pipelines/spatial.py",
    "src/pipelines/tiger.py",
    "src/pipelines/zori.py",
    "src/pipelines/create_zcta_shapefile.py",
    "run_analysis.py",
    "run_pipeline.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest-cov>=4.0.0",
]
